# offline-raytracer

./: .gitignore  CMakeLists.txt  README.md  README.txt  mr  mt  planning.txt
scenes/: sample_scene  scene1.txt  scene2.txt  scene3.txt  scene4.txt  scene5.txt  scene6.txt  scene7.txt  sceneCube.txt  sceneMap.txt  scenefish.txt
src/: CMakeLists.txt  main.cpp  objects.cpp  objects.hpp  objloader.cpp  objloader.hpp  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp  sceneloader.cpp  sceneloader.hpp
test/: CMakeLists.txt  testfile.txt  testloader.cpp  testobjects.cpp  testray.cpp  testscene.cpp
test/scenes/: 1_nocount.txt  2_badcount.txt  3_valid.txt  4_missingent.txt  5_badent.txt  test_fire_ray.txt  test_raytrace.txt
